# mod_muse-ai

./: .gitignore  HOWTO.md  README.md  apache-mod-muse-ai.md  build_module.sh  install_template.sh.in  meson.build  mod_muse_ai.c  models.json  muse-ai-progress.md  test-minimal.conf
docs/: PROJECT_STRUCTURE.md  Quickguide.md  STREAMING_SANITIZATION_GUIDE.md  advanced-optimizations.md  locale-identifiers.csv  muse-ai-progress.md  muse-translation-plan.md  pruned-languages.csv
examples/: .htaccess-translation  demo-translation.ai  language-switcher.html  mod_muse-ai-full.conf  mod_muse-ai-simple.conf  phase3-apache.conf  phase3-simple.conf  translation-config.conf
scripts/: build_modular.sh  build_module.sh  generate_locales.py
src/: advanced_config.c  advanced_config.h  advanced_streaming.h  connection_pool.c  connection_pool.h  error_pages.c  error_pages.h  http_client.c  language_selection.c  language_selection.h  metrics.c  mod_muse_ai.c  mod_muse_ai.h  mod_muse_ai_main.c  mod_muse_ai_test.c  model_config.c  model_config.h  model_config_monitor.c  model_selection.c  model_thread.c  phase3_integration.c  phase3_integration.h  request_handlers.c  request_handlers.h  sanitize.c  streaming.c  supported_locales.c  supported_locales.h  test_locales.c  utils.c
